--- a/pom.xml
+++ b/pom.xml
@@ -575,6 +575,15 @@
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
+			<plugin>
+   				<groupId>org.apache.maven.plugins</groupId>
+    				<artifactId>maven-compiler-plugin</artifactId>
+    				<configuration>
+        				<source>1.8</source>
+        				<target>1.8</target>
+        				<executable>${JAVA_HOME}/bin/javac</executable>
+    				</configuration>
+			</plugin>
 
 			<plugin>
 				<groupId>com.github.spotbugs</groupId>
