--- a/pom.xml
+++ b/pom.xml
@@ -619,9 +619,19 @@
 			</plugin>
 			<!--OSSRH -->
 
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-javadoc-plugin</artifactId> 
-				<executions> <execution> <id>attach-javadocs</id> <goals> <goal>jar</goal> 
-				</goals> </execution> </executions> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
+			<plugin>
+ 				<groupId>org.apache.maven.plugins</groupId> 
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions> 
+					<execution>
+						<id>attach-javadocs</id> 
+						<goals> 
+							<goal>jar</goal> 
+						</goals> 
+						</execution>
+					</executions>
+			</plugin>
+			<!-- </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
 				<artifactId>maven-gpg-plugin</artifactId> <version>1.5</version> <executions> 
 				<execution> <id>sign-artifacts</id> <phase>verify</phase> <goals> <goal>sign</goal> 
 				</goals> </execution> </executions> </plugin> -->
