--- a/pom.xml
+++ b/pom.xml
@@ -622,7 +622,7 @@
 			<plugin>
  				<groupId>org.apache.maven.plugins</groupId> 
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<!-- <version>$2.5.3</version>
+				<!-- <version>$2.5.3</version> -->
 				<executions> 
 					<execution>
 						<id>attach-javadocs</id> 
