--- a/pom.xml
+++ b/pom.xml
@@ -635,7 +635,7 @@
 					</execution>
 				</executions>
 				<configuration>
-       					 <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+       					 <javadocExecutable>${java_home}/bin/javadoc</javadocExecutable>
         				 <excludePackageNames>com.vu.poc.test.objects</excludePackageNames>
        					 <overview />
    				 </configuration>
