--- a/pom.xml
+++ b/pom.xml
@@ -622,7 +622,7 @@
 			<plugin>
  				<groupId>org.apache.maven.plugins</groupId> 
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<!-- <version>$2.5.3</version> -->
+				<version>{maven-javadoc-plugin.version}</version> 
 				<executions> 
 					<execution>
 						<id>attach-javadocs</id> 
@@ -635,7 +635,7 @@
 					</execution>
 				</executions>
 				<configuration>
-       					 <javadocExecutable>${java_home}/bin/javadoc</javadocExecutable>
+       					 <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
         				 <excludePackageNames>com.vu.poc.test.objects</excludePackageNames>
        					 <overview />
    				 </configuration>
