--- a/pom.xml
+++ b/pom.xml
@@ -622,7 +622,7 @@
 			<plugin>
  				<groupId>org.apache.maven.plugins</groupId> 
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<!-- <version>{maven-javadoc-plugin.version}</version> -->
+				<version>3.2.0</version>
 				<executions> 
 					<execution>
 						<id>attach-javadocs</id> 
