--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
 	<artifactId>shopizer</artifactId>
 	<version>2.17.0</version>
 	<packaging>pom</packaging>
-	
 
 	<name>shopizer</name>
 	<url>http://ww.shopizer.com</url>
@@ -575,6 +574,7 @@
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>com.github.spotbugs</groupId>
 				<artifactId>spotbugs-maven-plugin</artifactId>
@@ -619,25 +619,9 @@
 			</plugin>
 			<!--OSSRH -->
 
-			<plugin>
- 				<groupId>org.apache.maven.plugins</groupId> 
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.2.0</version>
-				<executions> 
-					<execution>
-						<id>attach-javadocs</id> 
-						<goals> 
-							<goal>jar</goal> 
-						</goals> 
-					</execution>
-				</executions>
-				<configuration>
-        				<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
-        				<excludePackageNames>com.vu.poc.test.objects</excludePackageNames>
-        				<overview />
-    				</configuration>
-			</plugin>
-			<!-- </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-javadoc-plugin</artifactId> 
+				<executions> <execution> <id>attach-javadocs</id> <goals> <goal>jar</goal> 
+				</goals> </execution> </executions> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
 				<artifactId>maven-gpg-plugin</artifactId> <version>1.5</version> <executions> 
 				<execution> <id>sign-artifacts</id> <phase>verify</phase> <goals> <goal>sign</goal> 
 				</goals> </execution> </executions> </plugin> -->
