--- a/sm-shop/pom.xml
+++ b/sm-shop/pom.xml
@@ -201,8 +201,22 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>2.1.5.RELEASE</version>
 			</plugin>
+			<plugin>
+      			  <!-- Build an executable JAR -->
+      			  <groupId>org.apache.maven.plugins</groupId>
+      			  <artifactId>maven-jar-plugin</artifactId>
+      			  <version>3.1.0</version>
+     			  <configuration>
+       			    <archive>
+          		      <manifest>
+            			<addClasspath>true</addClasspath>
+            			<classpathPrefix>lib/</classpathPrefix>
+            			<mainClass>com.mypackage.MyClass</mainClass>
+          		      </manifest>
+        		    </archive>
+      			  </configuration>
+    		       </plugin>
 		</plugins>
 		<finalName>ROOT</finalName>
 	</build>
