--- a/pom.xml
+++ b/pom.xml
@@ -617,6 +617,18 @@
 				</executions>
 			</plugin>
 			<plugin>
+            			<groupId>org.springframework.boot</groupId>
+            			<artifactId>spring-boot-maven-plugin</artifactId>
+           			<version>2.1.5.RELEASE</version>
+            			<executions>
+                			<execution>
+                   				 <goals>
+                        				<goal>repackage</goal>
+                    				</goals>
+                			</execution>
+           			</executions>
+        		</plugin>
+			<plugin>
       			  <!-- Build an executable JAR -->
       			  <groupId>org.apache.maven.plugins</groupId>
       			  <artifactId>maven-jar-plugin</artifactId>
